[FIX] A few bugs with uploading pictures, most notably, encoding is changed to no wrap